# keyboard

./: .bzrignore  .gitignore  CMakeLists.txt  COPYING  COPYING.BSD  COPYING.CC-BY  COPYING.CC-BY-SA  Jenkinsfile  Makefile  README  README.md  STYLING  buildOnDevice.sh  com.github.maliit.keyboard.desktop  com.github.maliit.keyboard.metainfo.xml  config.pri  lomiri-keyboard.pro  snapcraft.yaml  ubuntu-keyboard-wrapper.sh  ubuntu-keyboard.pro  unittests.sh  word-prediction.pri
.github/workflows/: main.yaml
benchmark/: .gitignore  Makefile  benchmark.pro  main.cpp
cmake/: FindAnthy.cmake  FindAnthyUnicode.cmake  FindChewing.cmake  FindGIO.cmake  FindGLib2.cmake  FindHunspell.cmake  FindPinyin.cmake  FindPresage.cmake
data/: .gitignore  Makefile  data.pro
data/devices/: default.json  tablet.json
data/languages/: VirtualKeyboardLayout.dtd  ar.xml  bg_bg.xml  bn_in.xml  cs.xml  da.xml  de.xml  el_gr.xml  email.xml  en_gb.xml  en_us.xml  en_us_default.xml  es.xml  es_mx.xml  et.xml  fa.xml  fi.xml  fr.xml  fr_ca.xml  fr_ch.xml  gu_in.xml  he.xml  hi_in.xml  hu.xml  hy_am_alt.xml  id.xml  it.xml  kk.xml  kn_in.xml  lt.xml  mk_mk.xml  ml_in.xml  ms.xml  nl.xml  no.xml  number.xml  number_ar.xml  number_fa.xml  phonenumber.xml  phonenumber_ar.xml  (+40 more)
data/schemas/: com.canonical.keyboard.maliit.gschema.xml  com.lomiri.keyboard.maliit.gschema.xml  org.maliit.keyboard.maliit.gschema.xml
data/themes/: Ambiance.json  BorderedBlack.json  BorderedGrey.json  BorderedWhite.json  Breeze.json  BreezeDark.json  JustBlack.json  JustGrey.json  JustWhite.json  SuruBlack.json  SuruDark.json
debian/: changelog  control  copyright  files  lomiri-keyboard-arabic.install  lomiri-keyboard-autopilot.install  lomiri-keyboard-bosnian.install  lomiri-keyboard-bulgarian.install  lomiri-keyboard-catalan.install  lomiri-keyboard-chinese-pinyin.install  lomiri-keyboard-danish.install  lomiri-keyboard-data.install  lomiri-keyboard-dev.install  lomiri-keyboard-dutch.install  lomiri-keyboard-emoji.install  lomiri-keyboard-finnish.install  lomiri-keyboard-french.install  lomiri-keyboard-greek.install  lomiri-keyboard-gsettings-schema-name-change.sh  lomiri-keyboard-hebrew.install  lomiri-keyboard-hungarian.install  lomiri-keyboard-icelandic.install  lomiri-keyboard-italian.install  lomiri-keyboard-japanese.install  lomiri-keyboard-korean.install  lomiri-keyboard-lithuanian.install  lomiri-keyboard-macedonian.install  lomiri-keyboard-persian.install  lomiri-keyboard-portuguese.install  lomiri-keyboard-romanian.install  lomiri-keyboard-russian.install  lomiri-keyboard-serbian.install  lomiri-keyboard-spanish.install  lomiri-keyboard-swedish.install  lomiri-keyboard-swiss-french.install  lomiri-keyboard-turkish.install  lomiri-keyboard.install  lomiri-keyboard.links  lomiri-keyboard.migrations  qtdeclarative5-ubuntu-keyboard-extensions0.1.install  (+52 more)
debian/systemd/: maliit-server.service
debian/upstart/: maliit-server.conf
doc/: keyboard-styling-calc.ods
plugins/: README  plugins.pro
plugins/de/: de.pro
plugins/en/: en.pro
plugins/es/: es.pro
plugins/example/: example.pro  exampleplugin.cpp  exampleplugin.h  exampleplugin.json
plugins/fr/: fr.pro
plugins/it/: it.pro
plugins/pinyin/: chineselanguagefeatures.h  pinyin.pro  pinyinadapter.cpp  pinyinadapter.h  pinyinplugin.cpp  pinyinplugin.h
plugins/pt/: pt.pro
plugins/western/: candidatescallback.h  languagefeatures.h  spellchecker.cpp  spellchecker.h  western.pro  westernplugin.cpp  westernplugin.h
plugins/westernsupport/: predictivetextworker.cpp  predictivetextworker.h  spellchecker.cpp  spellchecker.h  spellcheckerworker.cpp  spellcheckerworker.h  spellpredictworker.cpp  spellpredictworker.h  westernlanguagefeatures.cpp  westernlanguagefeatures.h  westernlanguagesplugin.cpp  westernlanguagesplugin.h  westernsupport.cpp  westernsupport.h  westernsupport.pro  westernsupport_global.h
po/: CMakeLists.txt  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ckb.po  cs.po  cy.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fr_CH.po  gd.po  gl.po  he.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  (+45 more)
prototype/prototype/: ActionKey.qml  CharKey.qml  EnterKey.qml  KeyPad.qml  Keyboard_en_us.qml  Keyboard_symbols.qml  ShiftKey.qml  SymbolShiftKey.qml  constants.js  prototype.qml  prototype.qmlproject
qml/: ActionsToolbar.qml  FloatingActions.qml  Keyboard.qml  KeyboardContainer.qml  LanguageMenu.qml  Makefile  Popper.qml  RotationHelper.qml  WordRibbon.qml  constants.js  maliit-keyboard-extended.qml  maliit-keyboard.qml  maliit-magnifier.qml  maliit-ui-constants.qml  prototype.qml  prototype.qmlproject  qml.pro  theme_loader.js
qml/images/: action_key@27.sci  action_key_bg@18.sci  action_key_bg@27.sci  grey_key@27.sci  key_bg@18.sci  key_bg@27.sci  keybg@18.sci  keybg_action@18.sci  keybg_action_active@18.sci  magnified_key.sci  magnified_key@27.sci  popover.sci  popover@27.sci  white_key@27.sci
qml/keys/: ActionKey.qml  ActionsToolbarButton.qml  BackspaceKey.qml  CapsLockKey.qml  CategoryKey.qml  CharKey.qml  DownKey.qml  DropShadow.qml  EndKey.qml  EnterKey.qml  EscapeKey.qml  ExtendedKeysSelector.qml  FloatingActionKey.qml  HCharKey.qml  HomeKey.qml  KeyIcon.qml  KeyPad.qml  KeyPopover.qml  Language.qml  LanguageKey.qml  LanguageMenu.qml  LeftKey.qml  Magnifier.qml  OneTwoKey.qml  PageDownKey.qml  PageUpKey.qml  Popper.qml  PressArea.qml  ReturnKey.qml  RightKey.qml  ShiftKey.qml  SmallSpaceKey.qml  SpaceKey.qml  Spacer.qml  SymbolShiftKey.qml  TabKey.qml  UpKey.qml  UrlKey.qml  key_constants.js  languages.js  (+2 more)
qml/languages/: Keyboard_de.qml  Keyboard_emoji.qml  Keyboard_en_email.qml  Keyboard_en_url.qml  Keyboard_en_url_search.qml  Keyboard_en_us.qml  Keyboard_es.qml  Keyboard_formattednumbers.qml  Keyboard_fr.qml  Keyboard_numbers.qml  (+7 more)
src/: Makefile  config-plugin.pri  config.pri  src.pro  word-prediction.pri
tests/: Makefile  common-check.pri  tests.pro
tools/: README  gen-class  gen-test  overrides-from-hunspell.py  update-langfile.pl
(+900 files in other folders)
